Fixes from roles changes